@@ -8,6 +8,7 @@ import org.springframework.stereotype.Component;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
+import java.util.Optional;
 
 @Component
 public class TerraPumlRunner implements ApplicationRunner {
@@ -24,10 +25,11 @@ public class TerraPumlRunner implements ApplicationRunner {
             System.err.println("Usage: --from=<path> --to=<path>");
         }
 
-        var fromPath = args.getOptionValues("from").get(0);
-        var toPath = args.getOptionValues("to").get(0);
+        var fromPath = args.getOptionValues("from").getFirst();
+        var toPath = args.getOptionValues("to").getFirst();
+        var layoutPath = args.getOptionValues("layout").stream().findFirst().map(File::new);
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(toPath))) {
-            writer.write(generatePlantUmlUse.generateFromTerraform(new File(fromPath)));
+            writer.write(generatePlantUmlUse.generateFromTerraform(new File(fromPath), layoutPath));
         }
     }
 }
